// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<span
  aria-valuenow="1"
  class="s-6VEvz9s88k9v"
  role="slider"
>
  <button
    class="s-NMyTiX1zi6rz"
    secondary="false"
  >
    <span
      class="material-icons s-NMyTiX1zi6rz"
    >
      front_hand
    </span>
    
    
    
    <strong
      class="s-6VEvz9s88k9v"
    >
      1
    </strong>
  </button>
  <!--&lt;Button&gt;-->
   
  <div
    class="s-6VEvz9s88k9v"
  >
    <button
      class="s-NMyTiX1zi6rz"
      data-up="true"
      secondary="false"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        arrow_drop_up
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      data-down="true"
      secondary="false"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        arrow_drop_down
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
  </div>
</span>
`;

exports[`Disabled 1`] = `
<span
  aria-valuenow="1"
  class="s-6VEvz9s88k9v"
  role="slider"
>
  <button
    class="s-NMyTiX1zi6rz"
    disabled=""
    secondary="false"
  >
    <span
      class="material-icons s-NMyTiX1zi6rz"
    >
      stop
    </span>
    
    
    
    <strong
      class="s-6VEvz9s88k9v"
    >
      1
    </strong>
  </button>
  <!--&lt;Button&gt;-->
   
  <div
    class="s-6VEvz9s88k9v"
  >
    <button
      class="s-NMyTiX1zi6rz"
      data-up="true"
      disabled=""
      secondary="false"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        arrow_drop_up
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      data-down="true"
      disabled=""
      secondary="false"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        arrow_drop_down
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
  </div>
</span>
`;

exports[`Secondary 1`] = `
<span
  aria-valuenow="1"
  class="s-6VEvz9s88k9v"
  role="slider"
>
  <button
    class="s-NMyTiX1zi6rz"
    secondary="true"
  >
    <span
      class="material-icons s-NMyTiX1zi6rz"
    >
      send
    </span>
    
    
    
    <strong
      class="s-6VEvz9s88k9v"
    >
      1
    </strong>
  </button>
  <!--&lt;Button&gt;-->
   
  <div
    class="s-6VEvz9s88k9v"
  >
    <button
      class="s-NMyTiX1zi6rz"
      data-up="true"
      secondary="true"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        arrow_drop_up
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      data-down="true"
      secondary="true"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        arrow_drop_down
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
  </div>
</span>
`;
